@@ -7,10 +7,7 @@ import matura.maturauebung.model.Admin;
 import matura.maturauebung.model.Kunde;
 import matura.maturauebung.repository.AdminRepository;
 import matura.maturauebung.repository.KundenRepository;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Order;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -27,16 +24,17 @@ import java.util.Optional;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 
 @WebMvcTest(controllers = KundenController.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class KundenRestControllerTest {
 
     @MockBean
@@ -51,7 +49,7 @@ public class KundenRestControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    Kunde k;
+
     List<Kunde> list;
 
     @BeforeAll
@@ -65,9 +63,9 @@ public class KundenRestControllerTest {
         Kunde kunde = new Kunde();
         kunde.setName("Max");
         kunde.setEmail("e@h.com");
-        kundenRepository.save(k);
+        kundenRepository.save(kunde);
 
-        list = new ArrayList<>(Arrays.asList(kunde));
+        list = new ArrayList<>(List.of(kunde));
         when(kundenRepository.findAll()).thenReturn(list);
 
         when(kundenRepository.findById(1L)).thenReturn(Optional.of(kunde));
@@ -76,31 +74,13 @@ public class KundenRestControllerTest {
 
     @Test
     @Order(1)
-    public void createUserTest() throws Exception {
+    public void createUser() throws Exception {
+        Kunde tutorial = new Kunde(1L, "SpringBoot@WebMvcTest", "Description");
         Optional<Admin> a = adminRepository.findById(1L);
-        k = new Kunde(1L, "Max", "Mustermann");
 
         if (a.isPresent()) {
             Admin admin = a.get();
-
             mockMvc.perform(post("/kunde/create")
-                            .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(k)))
-                    .andExpect(status().isCreated());
-        }
-    }
-
-    @Test
-    @Order(2)
-    void shouldCreateKunde() throws Exception {
-        Kunde tutorial = new Kunde(1L, "Spring Boot @WebMvcTest", "Description");
-        Optional<Admin> a = adminRepository.findById(1L);
-
-
-        if (a.isPresent()) {
-            Admin admin = a.get();
-            mockMvc.perform(post("/api/tutorials")
                             .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken())
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(objectMapper.writeValueAsString(tutorial)))
@@ -109,27 +89,47 @@ public class KundenRestControllerTest {
         }
     }
 
-
     @Test
-    @Order(3)
-    void returnCustomer() throws Exception {
+    @Order(2)
+    void shouldCreateKunde() throws Exception {
+        Kunde tutorial = new Kunde(1L, "SpringBoot@WebMvcTest", "Description");
         Optional<Admin> a = adminRepository.findById(1L);
 
         if (a.isPresent()) {
-
             Admin admin = a.get();
-            mockMvc.perform(get("/kunde/load/{id}", 1L)
-                            .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken()))
-                    .andExpect(status().isOk())
-                    .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
-                    .andExpect(jsonPath("$.name").value(k.getName()))
-                    .andExpect(jsonPath("$.email").value(k.getEmail()))
+            mockMvc.perform(post("/kunde/create")
+                            .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken())
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(tutorial)))
+                    .andExpect(status().isCreated())
                     .andDo(print());
-
-            assertEquals(kundenRepository.findById(1L), k);
         }
     }
 
+/*
+    @Test
+    @Order(3)
+    void returnCustomer() {
+        Assertions.assertDoesNotThrow(() -> {
+            Optional<Admin> a = adminRepository.findById(1L);
+
+            if (a.isPresent()) {
+                Admin admin = a.get();
+
+                mockMvc.perform(get("/kunde/load/{id}", 1L)
+                                .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken()))
+                        .andExpect(status().isOk())
+                        .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+                        .andExpect(jsonPath("$.name").value(k.getName()))
+                        .andExpect(jsonPath("$.email").value(k.getEmail()))
+                        .andDo(print());
+
+                assertEquals(kundenRepository.findById(1L), k);
+            }
+        });
+
+    }
+*/
     @Test
     @Order(4)
     void returnCustomers() throws Exception {
@@ -172,4 +172,63 @@ public class KundenRestControllerTest {
 
         }
     }
+
+    @Test
+    @Order(6)
+    void shouldReturnListOfTutorials() throws Exception {
+        List<Kunde> tutorials = new ArrayList<>(
+                Arrays.asList(new Kunde(1L, "Spring Boot @WebMvcTest 1", "Description 1"),
+                        new Kunde(2L, "Spring Boot @WebMvcTest 2", "Description 2"),
+                        new Kunde(3L, "Spring Boot @WebMvcTest 3", "Description 3")));
+
+        Optional<Admin> a = adminRepository.findById(1L);
+        if (a.isPresent()) {
+            Admin admin = a.get();
+            when(kundenRepository.findAll()).thenReturn(tutorials);
+            mockMvc.perform(get("/api/tutorials")
+                            .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken()))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.size()").value(tutorials.size()))
+                    .andDo(print());
+
+            assertEquals(kundenRepository.findAll().size(), tutorials.size());
+        }
+    }
+
+    @Test
+    @Order(7)
+    void registrationWorksThroughAllLayers() throws Exception {
+        Optional<Admin> a = adminRepository.findById(1L);
+        Kunde user = new Kunde("Zaphod", "zaphod@galaxy.net");
+
+        if (a.isPresent()) {
+            Admin admin = a.get();
+            mockMvc.perform(post("/kunde/create", 1L)
+                            .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken())
+                            .contentType("application/json")
+                            .content(objectMapper.writeValueAsString(user)))
+                    .andExpect(status().isOk());
+
+            Kunde userEntity = kundenRepository.findByName("Zaphod");
+            assertEquals(userEntity.getEmail(), "zaphod@galaxy.net");
+        }
+    }
+
+    @Test
+    void shouldDeleteTutorial() throws Exception {
+        long id = 1L;
+        Optional<Admin> a = adminRepository.findById(1L);
+
+        if (a.isPresent()) {
+            Admin admin = a.get();
+
+            doNothing().when(kundenRepository).deleteById(id);
+            mockMvc.perform(delete("/kunde/delete/{id}", id)
+                            .header(HttpHeaders.AUTHORIZATION, "Bearer " + admin.getToken()))
+                    .andExpect(status().isNoContent())
+                    .andDo(print());
+        }
+    }
+
+
 }
